--- a/desafio-04/styles.css
+++ b/desafio-04/styles.css
@@ -12,4 +12,32 @@
 .encolher {
 	background-color: gray;
 	width: 50px !important;
+	height: 50px !important;
+}
+
+.classe1 {
+	background-color: gray;
+	height: 100px;
+}
+
+.classe2 {
+	width: 100px;
+}
+
+.classe3 {
+	background-color: red;
+	height: 100px;
+	width: 100px;
+}
+
+.progresso {
+	height: 10px;
+	width: 0px;
+	background-color: blue;
+}
+
+.perigo {
+	background-color: red;
+	height: 100px;
+	width: 100px;
 }
